Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -102,5 +102,7 @@
 \input{10problemkompleksitet}
 \newpage
 \input{11kjoretidertilpensumalgoritmer}
+\newpage
+\input{12linearprog}
 
 \end{document}
